@@ -71,6 +71,7 @@
     <Compile Include="MockFixture.cs" />
     <Compile Include="ProtectedMockFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Regressions\ArgumentTypeFixture.cs" />
     <Compile Include="Regressions\IssueReportsFixture.cs" />
     <Compile Include="Regressions\StreamFixture.cs" />
   </ItemGroup>
